<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/utd_heading"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/vs"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/madrid_heading"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/united_goal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:text="@string/utd_goal"
                        android:textColor="#000000"
                        android:textSize="56sp" />

                    <TextView
                        android:id="@+id/united_foul"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/utd_foul"
                        android:textColor="#000000"
                        android:textSize="56sp" />


                    <TextView
                        android:id="@+id/united_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/utd_card"
                        android:textColor="#000000"
                        android:textSize="56sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="unitedGoalButton"
                        android:text="@string/utd_goal_button" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="unitedFoulButton"
                        android:text="@string/utd_foul_button" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="unitedCardButton"
                        android:text="@string/utd_card_button" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/madrid_goal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="35dp"
                        android:text="@string/madrid_goal"
                        android:textColor="#000000"
                        android:textSize="56sp" />

                    <TextView
                        android:id="@+id/madrid_foul"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/madrid_foul"
                        android:textColor="#000000"
                        android:textSize="56sp" />


                    <TextView
                        android:id="@+id/madrid_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/madrid_card"
                        android:textColor="#000000"
                        android:textSize="56sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="madridGoalButton"
                        android:text="@string/madrid_goal_button" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="madridFoulButton"
                        android:text="@string/madrid_foul_button" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="madridCardButton"
                        android:text="@string/madrid_card_button" />


                </LinearLayout>


            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:onClick="resetScore"
                android:text="@string/reset" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>
